--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ Flask-CORS==4.0.0
 playwright==1.38.0
 schedule==1.2.0
 python-dotenv==1.0.0
+aiofiles==23.2.1
 
 # Note: asyncio is built into Python 3.7+, no need to install separately
 # To install Playwright browsers after pip install, run:
